2006-03-28  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gnome-desktop branched.

2006-03-24  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gedit, glib branched.

2006-03-20  Gabor Kelemen  <kelemeng@gnome.hu>

	* translation-status.xml: Corrected potname for gnome-spell and epiphany-extensions

2006-03-18  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gnome-terminal branched.

2006-03-18  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gcalctool branched.

2006-03-14  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gnome-games branched.

2006-03-14  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: fast-user-switch-applet, metacity branched.

2006-03-14  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: evince branched.

2006-03-13  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: eog, zenity branched.

2006-03-13  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: epiphany, epiphany-extensions,
	deskbar-applet, yelp, gucharmap branched with gnome-2-14.

2006-03-11  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: libbonobo branched.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: branch evolution, evolution-data-server, 
	evolution-exchange and gtkhtml for gnome-2-14.

2006-02-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Moved new modules according to final
	module list from proposed to desktop, and the rest to extras.

2006-02-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-icon-theme has
	been branched for gnome-2-14.

2006-02-08  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: evolution-jescs should be in 2.6 series.

2006-02-06  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: gnome-utils has been branched for
	gnome-2-14.

2006-02-03  Funda Wang  <fundawang@linux.net.cn>
