@@ -909,24 +909,28 @@
         <potname name="gimp20.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
+        <download/>
       </component>
       <component name="gimp-libgimp" dir="gimp" group="extras">
         <podir dir="po-libgimp"/>
         <potname name="gimp20.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
+        <download/>
       </component>
       <component name="gimp-plug-ins" dir="gimp" group="extras">
         <podir dir="po-plug-ins"/>
         <potname name="gimp20.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
+        <download/>
       </component>
       <component name="gimp-script-fu" dir="gimp" group="extras">
         <podir dir="po-script-fu"/>
         <potname name="gimp20.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
+        <download/>
       </component>
       <component name="gimp-tiny-fu" dir="gimp-tiny-fu" group="extras">
         <podir dir="po"/>
@@ -939,6 +943,8 @@
         <podir dir="po-tips"/>
         <potname name="gimp20-tips.pot"/>
         <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
       </component>
     </version>
   </module>
@@ -1632,7 +1638,7 @@
       <component name="gnome-themes" dir="gnome-themes" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-themes.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-14"/>
         <regenerate/>
         <download/>
       </component>
@@ -2520,7 +2526,7 @@
       <component name="pessulus" dir="pessulus" group="desktop">
         <podir dir="po"/>
         <potname name="pessulus.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-14"/>
         <regenerate/>
         <download/>
       </component>
@@ -3013,7 +3019,7 @@
       <component name="vte" dir="vte" group="desktop">
         <podir dir="po"/>
         <potname name="vte.pot"/>
-        <branch name="HEAD"/>
+        <branch name="vte-0-12"/>
         <regenerate/>
         <download/>
       </component>
@@ -3022,7 +3028,7 @@
       <component name="vte" dir="vte" group="desktop">
         <podir dir="po"/>
         <potname name="vte.pot"/>
-        <branch name="HEAD"/>
+        <branch name="vte-0-12"/>
         <regenerate/>
         <download/>
       </component>
