@@ -1,3 +1,8 @@
+2006-03-31  Danilo Šegan  <danilo@gnome.org>
+
+	* translation-status.xml: Added <download/> tags to gimp stuff.
+	gnome-themes, pessulus, vte branched.
+
 2006-03-28  Danilo Šegan  <danilo@gnome.org>
 
 	* translation-status.xml: gnome-desktop branched.
